# bevy-voxels

./: Cargo.toml
.cargo/: config.toml
assets/blocks/: air.block.ron  dirt.block.ron  grass.block.ron  stone.block.ron  stone_fence.block.ron
assets/models/: cube.model.ron  fence.model.ron
assets/shaders/: array_texture.wgsl
src/: asset_registry.rs  assets.rs  block_type.rs  dev_tools.rs  diagnostics.rs  lib.rs  main.rs  model.rs
src/assets/: block.rs  block_type.rs  mod.rs  model.rs  registry.rs
src/game/: chunk.rs  mesh.rs  mod.rs  player.rs
src/render/: block_highlight.rs  chunk_mesh.rs  mod.rs  sky.rs  wireframe.rs
src/screens/: gameplay.rs  loading.rs  mod.rs  splash.rs
src/theme/: interaction.rs
src/ui/: crosshair.rs  debug_stats.rs  hotbar.rs  loading_screen.rs  mod.rs  splash_screen.rs
src/ui/theme/: widgets.rs
src/world/: chunk.rs  mod.rs  voxel_world.rs
